# fatora_payment_gateways

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
fatora_payment_gateway/: hooks.py  modules.txt
fatora_payment_gateway/fatora_payment_gateway/doctype/fatora_settings/: fatora_settings.js  fatora_settings.json  fatora_settings.py  test_fatora_settings.py
fatora_payment_gateway/templates/pages/: fatora_checkout.html  fatora_checkout.py  fatora_checkout_response.html  fatora_checkout_response.py
