[project]
name = "fatora_payment_gateway"
version = "0.0.1"
authors = [
    { name = "Globcom Qatar", email = "info@globcomqatar.com"}
]
description = "Globcom Qatar Fatora Payment Gateways Development"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "frappe>=15.0.0,<16.0.0",
    # Add other dependencies here
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench]
frappe-dependencies = { frappe = ">=15.0.0,<16.0.0" }