[project]
name = "fatora_payment_gateway"
authors = [
    { name = "Globcom Qatar", email = "info@globcomqatar.com"}
]
description = "Globcom Qatar Fatora Payment Gateways Development"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# ✅ REQUIRED BY FRAPPE CLOUD
[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"

# Optional: only for developer mode
[tool.bench.dev-dependencies]
# frappe = ">=16.0.0-dev, <=17.0.0-dev"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017",
    "B018",
    "B023",
    "B904",
    "E101",
    "E402",
    "E501",
    "E741",
    "F401",
    "F403",
    "F405",
    "F722",
    "W191",
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
